Issue#25-Fix:Service for retrieving all users.
